[FIX] stock_barcode: line form style issues
Since the commit 78424c925306f92b3dab4ec8b7b18410cdfe853d there was some
visual issues when display the line form view on a small device:
- Fields width was too large;
- On `stock.move.line` form view, the quant list at the bottom was
  hidden by the buttons.

This commit fixes that.

X-original-commit: 1c6b25cb0371df2212a200ddfa6c8cf9604fb8e9
Part-of: odoo/enterprise#32481

--- a/stock_barcode/static/src/components/main.scss
+++ b/stock_barcode/static/src/components/main.scss
@@ -114,7 +114,6 @@
         clear: both;
         flex: auto;
         overflow: auto;
-        box-shadow: inset 0 -7px 4px -5px $gray-300;
         color: $gray-800;
         margin-bottom: 120px;
 
@@ -243,10 +242,11 @@
     // =====================================
     .o_barcode_line_form {
         margin-left: 24px;
+        margin-bottom: 36px;
         font-size: 1.4em;
 
         @include media-breakpoint-down(md) {
-            margin: 0;
+            margin-left: 0;
         }
 
         .row {
@@ -282,13 +282,7 @@
 
             & > div {
                 .o_field_float {
-                    min-width: 100%;
-                    max-width: 100%;
-                }
-
-                @include media-breakpoint-down(sm) {
-                    min-width: 510px;
-                    max-width: 510px;
+                    width: 100%;
                 }
 
                 .o_input {
